2010-02-05  Eric Carlson  <eric.carlson@apple.com>

        Reviewed by Oliver Hunt.

        https://bugs.webkit.org/show_bug.cgi?id=33671
        [GTK] media/video-loop.html fails intermittently on Gtk Bots

        Rewrite test to make it less timing dependent.

        * media/video-loop-expected.txt:
        * media/video-loop.html:

2010-02-05  Csaba Osztrogonác  <ossy@webkit.org>

        Rubber-stamped by Kenneth Rohde Christiansen.

        [Qt] Missing fast/frames/flattening/resources/frameset-flattening-subframe-resize.html
        https://bugs.webkit.org/show_bug.cgi?id=34662

        * platform/qt/Skipped: fast/frames/flattening/frameset-flattening-subframe-resize.html skipped until fix.

2010-02-05  Csaba Osztrogonác  <ossy@webkit.org>

        Rubber-stamped by Kenneth Rohde Christiansen.

        Update expected results after r54441 to make buildbot happy.

        * platform/qt/fast/frames/flattening/frameset-flattening-advanced-expected.txt: Updated.
        * platform/qt/fast/frames/flattening/frameset-flattening-subframesets-expected.txt: Updated.

2010-02-05  Kenneth Rohde Christiansen  <kenneth@webkit.org>

        Unreviewed, missed in earlier commit.

        Add expected frame flattening results for Qt.

        * platform/qt/fast/frames/flattening/frameset-flattening-advanced-expected.txt: Added.
        * platform/qt/fast/frames/flattening/frameset-flattening-grid-expected.txt: Added.
        * platform/qt/fast/frames/flattening/frameset-flattening-simple-expected.txt: Added.
        * platform/qt/fast/frames/flattening/frameset-flattening-subframe-resize-expected.txt: Added.
        * platform/qt/fast/frames/flattening/frameset-flattening-subframesets-expected.txt: Added.

2010-01-19  Kenneth Rohde Christiansen  <kenneth@webkit.org>

        Reviewed by Dave Hyatt.

        Implement flattening of framesets
        https://bugs.webkit.org/show_bug.cgi?id=32717

        Frameset flattening layout test, plus expected result for Qt.
