@@ -1,5 +1,12 @@
 2010-02-05  Eric Carlson  <eric.carlson@apple.com>
 
+        Unreviewed revert of r54454, until I can generate new results
+
+        * media/video-loop-expected.txt:
+        * media/video-loop.html:
+
+2010-02-05  Eric Carlson  <eric.carlson@apple.com>
+
         Reviewed by Oliver Hunt.
 
         https://bugs.webkit.org/show_bug.cgi?id=33671
